Ensure navbar doesn't wrap

--- a/components/navbar.module.css
+++ b/components/navbar.module.css
@@ -40,6 +40,7 @@
   flex: 1;
   overflow: auto;
   padding: var(--s) var(--m);
+  white-space: nowrap;
 
   color: var(--color-text-secondary);
 }
